# src/types/FerryRoute.ts
@@ -1,8 +1,8 @@
 import { Document, Types } from "mongoose";
 
 export interface TFerryRoute extends Document {
-    startPoint: string;
-    endPoint: string;
+    start_point: string;
+    end_point: string;
     name: string;
     status: string;
     createdAt: Date;
